[gd_scene load_steps=7 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" uid="uid://cwvehg240rwk6" path="res://scripts/GameManager.gd" id="1_0x0x0"]
[ext_resource type="Script" uid="uid://fcrfoj53x4pt" path="res://scripts/Spaceship.gd" id="2_0x0x0"]
[ext_resource type="Script" uid="uid://d0gnh7ageg2a7" path="res://scripts/ObstacleGenerator.gd" id="3_0x0x0"]
[ext_resource type="Script" uid="uid://bpyv3x6xvjtpr" path="res://scripts/BackgroundParallax.gd" id="4_0x0x0"]
[ext_resource type="PackedScene" uid="uid://pk527sofcd33" path="res://scenes/Obstacle.tscn" id="5_0x0x0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 30)

[node name="Main" type="Node"]
script = ExtResource("1_0x0x0")

[node name="GameWorld" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="GameWorld"]
script = ExtResource("4_0x0x0")

[node name="Spaceship" type="CharacterBody2D" parent="GameWorld"]
position = Vector2(100, 360)
script = ExtResource("2_0x0x0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameWorld/Spaceship"]
shape = SubResource("RectangleShape2D_1")

[node name="SpaceshipVisual" type="Polygon2D" parent="GameWorld/Spaceship"]

[node name="ExhaustJet" type="Polygon2D" parent="GameWorld/Spaceship"]

[node name="EngineSound" type="AudioStreamPlayer" parent="GameWorld/Spaceship"]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="GameWorld/Spaceship"]

[node name="ObstacleGenerator" type="Node2D" parent="GameWorld"]
script = ExtResource("3_0x0x0")
obstacle_scene = ExtResource("5_0x0x0")

[node name="Camera2D" type="Camera2D" parent="GameWorld"]
position = Vector2(640, 360)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "Distance: 0m"
horizontal_alignment = 2

[node name="DifficultyLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 110.0
text = "Difficulty: 1.0"
horizontal_alignment = 2

[node name="GameOverLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
text = "Game Over!
Final Distance: 0m
Press R to restart"
horizontal_alignment = 1
vertical_alignment = 1
